# libaio-futures

./: .gitignore  Cargo.toml  build.rs
src/: abi.rs  lib.rs
tests/: simple_test.rs
