[package]
name = "libaio-futures"
version = "0.1.6"
authors = ["Determinant <tederminant@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Determinant/libaio-futures"
keywords = ["libaio", "aio", "async", "futures"]
license = "MIT"
description = "Straightforward Linux AIO using Futures/async/await."

[dependencies]
libc = "0.2.71"
parking_lot = "0.10.2"
crossbeam-channel = "0.4.2"

[dev-dependencies]
futures = "0.3.5"

[lib]
name = "libaiofut"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]
